# Carcassonne-game

./: AUTHORS  CMakeLists.txt
doc/: CMakeLists.txt  coding_standard.txt  doxygen.conf
doc/html/: affichage_8c.html  affichage_8c_source.html  affichage_8h.html  affichage_8h_source.html  annotated.html  classes.html  dir_33a9e13d127d7c16fbd6f364e92c6366.html  dir_59017ea81999418f37aea2feab706bf3.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6a21aa90fbc02764204ebb47582b9518.html  dir_71496735008f47d04bf59675bc5df161.html  dir_7196113efadde7568517c364798e7c88.html  dir_e0b63bbd3c80cf84a5f50a7c477e60f7.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_eval.html  globals_func.html  graph_8c.html  graph_8c_source.html  graph_8h.html  graph_8h_source.html  graph__tuiles_8c.html  graph__tuiles_8c_source.html  graph__tuiles_8h.html  graph__tuiles_8h_source.html  index.html  jeu_8c.html  jeu_8c_source.html  jeu_8h.html  jeu_8h_source.html  main_8c.html  main_8c_source.html  plateau_8c.html  plateau_8c_source.html  plateau_8h.html  plateau_8h_source.html  regles_8c.html  (+19 more)
doc/html/search/: all_5f.html  all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6a.js  all_6d.js  all_6e.js  all_70.js  all_71.js  all_72.js  all_73.js  all_74.js  all_75.js  all_76.js  classes_65.js  classes_67.html  classes_67.js  classes_6a.html  classes_6a.js  classes_70.js  classes_73.html  classes_73.js  classes_74.js  defines_5f.html  defines_62.js  defines_63.js  defines_64.js  defines_65.js  defines_67.html  defines_67.js  defines_68.html  defines_6c.js  defines_6e.js  (+53 more)
rapport/: rapport.tex
src/: main.c  struct.h
src/graphique/: affichage.c  affichage.h  jeu.c  jeu.h
tests/: test_graph.c  test_plateau.c
tests/test_tuiles/: test_tuiles.c  tuiles.txt  tuiles_err1.txt  (+11 more)
(+11 files in other folders)
